Dont bring kate to front when files externally modified

If you have the following setting checked:

[x] Warn about files modified by foreign processes

Then kate will activate the app and bring it to front interrupting any
other work that you might have been doing. This is very annoying and
makes this option very hard to use.

BUG: 353712